<resources>
    <string name="app_name" translatable="false">Rminz</string>

    <string name="facebook_app_id" translatable="false">457026555694374</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb457026555694374</string>
    <string name="title_activity_tabs" translatable="false">tabs</string>
    <string name="tab_text_1" translatable="false">Tab 1</string>
    <string name="tab_text_2" translatable="false">Tab 2</string>
    <string name="open" translatable="false">open</string>
    <string name="close" translatable="false">close</string>
    <string name="enter_messeag">Enter message</string>
    <string name="enter_numbe">Enter Number</string>
    <string name="contac">Contacts</string>
    <string name="schedule">Schedule</string>
    <string name="select_tim">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="every">Every</string>
    <string name="end_after">End after</string>
    <string name="enter_numbers">Enter Number</string>
    <string name="contact">Contacts</string>
    <string name="schedules">Schedule</string>
    <string name="select_times">Select Time</string>
    <string name="select_dat">Select Date</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_messeage">Enter messeage</string>
    <string name="contacts">Contacts</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="select_time">Select Time</string>
    <string name="select_dates">Select Date</string>
    <string name="skip">Skip</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="by_signing_up_you_agree_to_scheduler_s_terms_amp_use_and_privacy_policy"><![CDATA[By signing up, You agree to Scheduler\'s Terms&use and Privacy policy]]></string>
    <string name="sign_ins">SIGN IN</string>
    <string name="usernam">Username</string>
    <string name="passwords">Password</string>
    <string name="signing_in">SIGN IN</string>
    <string name="forget_password">Forget Password?</string>
    <string name="sign_ups">SIGN UP</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="pending">pending</string>
    <string name="done">Done</string>
    <string name="failed">Failed</string>
    <string name="deleted">Deleted</string>
    <string name="profile">Profile</string>
    <string name="language">Language</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="everys">Every</string>
    <string name="to">To</string>
    <string name="pendings">Pending</string>
    <string name="sent">Sent</string>
    <string name="faileds">Failed</string>
    <string name="scheduless">Schedule</string>

    <string name="message" translatable="false">
        To serve better ,Rminz needs \n
        to be granted permission in \n\
        accessibility settings.
        \n\
        \n\
        This is only for  Whatsapp \n\
        automation purpose.Your \n
        data "&amp;" actions will remain to be \n
        confidential &amp; secure.
        \n\
        if this setting is already enabled,\n\
        Please turn it off and enable it \n\
        again.

    </string>
    <string name="accessibility_service_description" translatable="false">

        Required for auto-sending WhatsApp messages.




    </string>


    <string name="pick_contacts" translatable="false">Pick contact(s)</string>
    <string name="picked_contacts" translatable="false">Picked contact(s)</string>

    <string name="permission_denied" translatable="false">Permission denied</string>
    <string name="permission_denied_contacts" translatable="false">The contact picker won\'t work without this permission. Are you sure you want to deny this permission?</string>
    <string name="permission_deny" translatable="false">Deny</string>
    <string name="permission_retry" translatable="false">Re-try</string>

    <string name="light_theme" translatable="false">Light Theme</string>
    <string name="dark_theme" translatable="false">Dark Theme</string>
    <string name="clear_penidings">Clear Penidings</string>
</resources>