<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/style1"
    tools:context="com.example.eminz.Activity.Loginpage"
    >


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <TextView
        android:gravity="right"
        android:id="@+id/skipo"
        android:layout_width="84dp"
        android:layout_height="50dp"
        android:text="@string/skip"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.038"
        tools:ignore="RtlHardcoded" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="rminz"
        android:textColor="#FF6D00"
        android:textSize="70sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toTopOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/signin"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/style2"
        android:ems="10"
        android:foregroundGravity="center"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="#DD2C00"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:rippleColor="#BFE5E1" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/facebook"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/style2"
        android:ems="10"
        android:gravity="center"
        android:text="SIGN IN WITH FACEBOOK"
        android:textColor="#FFD54F"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:textColor="#FF6D00"
        android:id="@+id/create"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:text="@string/create_account"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/facebook" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="169dp"
        android:layout_height="78dp"
        android:layout_marginTop="44dp"
        android:autoLink="web"
        android:text="@string/by_signing_up_you_agree_to_scheduler_s_terms_amp_use_and_privacy_policy"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline11"
        app:layout_constraintStart_toStartOf="@+id/guideline10"
        app:layout_constraintTop_toBottomOf="@+id/create"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>